      was installed.

    - MComix now starts in RTL mode when a RTL language has been manually
      selected in the preference dialog.

    - Added an option to automatically rotate images if their height exceeds
      their width (or width exceeds height), located in the menu bar under
      Tools -> Transform image -> Auto-rotate image.

    - Updated traditional Chinese translation (by Wayne Su).

    - Updated Hebrew translation (by Isratine Citizen).

    - Updated Japanese translation (by Toshiharu Kudoh).

    - Updated Spanish translation (by Carlos Feliu).

MComix 0.99
Release date: 14.07.2012

    - Fixed "Go to page" dialog's thumbnail not scaling depending on dialog
      size.

    - Using the mouse wheel to scroll left now correctly advances to the
      next page in manga mode, instead of going back one page. Scrolling right
      has also been fixed.

    - Multiple open instances of MComix no longer overwrite each others'
      bookmarks when closed.

    - Fixed exception when trying to pack an archive using the archive editor.

    - Fixed a bug that prevented using the "Next archive"/"Previous archive"
      buttons when an empty archive was loaded (by Gabriel Falcone).

    - "Smart scrolling" now also works with the mouse wheel. In smart
      scrolling mode, MComix tries to follow the natural reading flow of a
      comic book by not only scrolling up or down, but also sideways.
      Please not that smart scrolling does not work in "Fit to width" or "Best
      fit mode", as there is no need to scroll sideways in these modes.

    - Zoom is now enabled in all fit modes (best fit, fit to width, fit to
      height).

    - Added new zoom mode 'Fit to size'. This mode always stretches an image
      to a given height or width. By default, a height of 1800px is set.
      This can be changed in the preferences dialog.

    - Most confirmation dialogs can now be permanently disabled by activating